# typescript-liveloki-app

./: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  0000000000000-init.sql  Caddyfile  Dockerfile  Dockerfile.db  Dockerfile.harvester  LICENSE  README.md  WARP.md  config.js  docker-compose-local.yml  docker-compose.yml  docker-compose.yml.OLD  entrypoint.sh  index.js  logger.js  package-lock.json  package.json
.github/workflows/: docker-build.yml  integration-test.yml  lint.yml
DP-Testing/: AIS-209621000.cot
DP-Testing/AIS-209415000/: AIS-209415000.cot
DP-Testing/AIS-209732000/: AIS-209732000.cot
backend/: .env_example  .prettierignore  config.js  eslint.config.js  index.js  keycloak.js  logger.js  package-lock.json  package.json
backend/rust/: Cargo.toml  Dockerfile  Rocket.toml  diesel.toml
backend/rust/.cargo/: config.toml
backend/rust/src/: db.rs  main.rs  schema.rs
backend/rust/src/controllers/: event_controller.rs
backend/rust/src/models/: event.rs
backend/rust/src/routes/: event_routes.rs  mod.rs
dataset/: init.sql
frontend/: eslint.config.mjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
harvester/: .env_example  docker-compose.yml  index.js  package-lock.json  package.json
instructions/: Livelog.md
integration/: Dockerfile  app.py  payload.json
migrations/: 1719933136170_add-freetext-to-event.cjs
preseed/: preseed.csv
public/: index.html  main.js  style.css
tests/: Dockerfile  package-lock.json  package.json
(+839 files in other folders)
