[package]
name = "battlelog-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
#rocket_contrib = "0.4.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.2.8", features = ["postgres", "chrono", "r2d2", "uuid"] }
uuid = { version = "1.16", features = ["v7", "serde"] }
#multer = "3.1"
#tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
